# nexus-intel.github.io

./: README.md  about.html  blog.html  content.json  facebook.html  footer.html  header.html  index.html  instagram.html  linkedin.html  loader.js  main.py  nexus.db  post.html  privacy.html  probe.py  pyproject.toml  refresh_content.py  robots.txt  script.js  seo_agent.py  sitemap.xml  study.html  style.css  test_api.py  test_contact.py  test_run.py  test_script.py  test_script2.py  threads.html  vibe_topics.md
backend/: DEPLOYMENT.md  Dockerfile  app.py  ecommerce_langgraph_bot.py  ecommerce_pydantic_bot.py  hospital_bot.py  test_hospital_bot.py
blogs/: 1-building-a-pydantic-ai-healthcare-chatbot.md  2-scaling-our-pydantic-ai-healthcare-chatbot-with-fastapi.md  agentic-ai-2026.md  ai-for-document-processing-in-healthcare-hipaa-compliant-ocr-solutions.md  ai-fraud-detection-for-fintech-how-ml-catches-what-rules-miss.md  ai-in-logistics-2026-automating-supply-chain-with-agentic-workflows.md  best-ocr-software-in-2026-google-document-ai-vs-amazon-textract-vs-custom.md  deepseek-v3-vs-llama-4-the-2026-benchmark.md  fastapi-+-pydantic-ai-the-ultimate-high-performance-ai-backend.md  gpt-5-vs-gemini-2-5-pro-vs-claude-4.md  how-to-automate-invoice-processing-with-ai-ocr-plus-llms.md  how-to-build-an-ai-agent-with-langgraph-step-by-step-python-tutorial.md  how-to-calculate-roi-for-ai-automation-projects.md  how-to-replace-rpa-with-agentic-ai-the-2026-migration-playbook.md  langchain-vs-langgraph-vs-crewai-which-framework-for-ai-agents.md  scaling-ocr-idp.md  (+17 more)
src/: footer.html  (+1 more)
(+70 files in other folders)
